--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="container">
-  <button class="btn btn-sm btn-warning my-3">Get News </button>
+  <button class="btn btn-sm btn-warning my-3" id="tv9">Get News </button>
 
     <ul id="news" class="list-group">
 
@@ -21,7 +21,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
 $(document).ready(function(){
-  $("button").click(function(){
+  $("button#tv9").click(function(){
   var id ='';
     $.getJSON("https://tv9telugu.com/wp-json/wp/v2/posts?per_page=100&page=1", function(result){
     console.log(result);
