--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <button class="btn btn-sm btn-warning my-3" id="tv9">News TV9</button>
   <button class="btn btn-sm btn-secondary my-3" id="10tv">News 10TV</button>
   <button class="btn btn-sm btn-secondary my-3" id="ntv">News NTV</button>
+  <button class="btn btn-sm btn-secondary my-3" id="gulte">News Gulte</button>
 
     <ul id="news" class="list-group">
 
@@ -51,6 +52,17 @@ $(document).ready(function(){
   $("button#ntv").click(function(){
   var id ='';
     $.getJSON("https://ntvtelugu.com/wp-json/wp/v2/posts?per_page=100&page=1", function(result){
+    //console.log(result);
+      $.each(result, function(i, field){
+      
+        $("ul#news").append('<li  class="list-group-item"><h4 class="lh-base fs-4 text-primary">'+ field['title']['rendered'] +"<small> ( "+moment(field['date']).format('Do MMMM YYYY, h:mm:ss a')+" )</small>"+"</h4>"+ field['content']['rendered'] +"<p><a href="+field['link']+" target='_blank'>Source Link </a></p>"+"</li>");
+      });
+    });
+  });
+ 
+ $("button#gulte").click(function(){
+  var id ='';
+    $.getJSON("https://www.gulte.com/wp-json/wp/v2/posts?per_page=100&page=1", function(result){
     //console.log(result);
       $.each(result, function(i, field){
       
